@@ -47,7 +47,7 @@ public:
 	void save(QSettings * set);
 	void load(QSettings * set);
 
-	bool exportStyles(const QString & filename);
+	bool exportStyles(const QString & filename) const;
 	QString toString();
 };
 
